12532
Cherry-picking PR 5454 on 2.12:

{noformat}
innercrash.scala:11: error: Internal error: unable to find the outer accessor symbol of <none>
      def f(): Outer = Outer.this
          ^
error: java.lang.StackOverflowError
  at java.lang.String.valueOf(String.java:2994)
  at scala.collection.mutable.StringBuilder.append(StringBuilder.scala:200)
  at scala.collection.TraversableOnce.$anonfun$addString$1(TraversableOnce.scala:359)
  at scala.collection.IndexedSeqOptimized.foreach(IndexedSeqOptimized.scala:32)
  at scala.collection.IndexedSeqOptimized.foreach$(IndexedSeqOptimized.scala:29)
  at scala.collection.mutable.WrappedArray.foreach(WrappedArray.scala:34)
  at scala.collection.TraversableOnce.addString(TraversableOnce.scala:357)
  at scala.collection.TraversableOnce.addString$(TraversableOnce.scala:353)
  at scala.collection.AbstractTraversable.addString(Traversable.scala:104)
  at scala.collection.TraversableOnce.mkString(TraversableOnce.scala:323)
  at scala.collection.TraversableOnce.mkString$(TraversableOnce.scala:322)
  at scala.collection.AbstractTraversable.mkString(Traversable.scala:104)
  at scala.collection.TraversableOnce.mkString(TraversableOnce.scala:325)
  at scala.collection.TraversableOnce.mkString$(TraversableOnce.scala:325)
  at scala.collection.AbstractTraversable.mkString(Traversable.scala:104)
  at scala.reflect.internal.Symbols$Symbol.compose(Symbols.scala:2707)
  at scala.reflect.internal.Symbols$Symbol.toString(Symbols.scala:2632)
  at java.lang.String.valueOf(String.java:2994)
  at java.lang.StringBuilder.append(StringBuilder.java:131)
  at scala.StringContext.standardInterpolator(StringContext.scala:125)
  at scala.StringContext.s(StringContext.scala:95)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerSelect(ExplicitOuter.scala:235)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)
  at scala.tools.nsc.transform.ExplicitOuter$OuterPathTransformer.outerPath(ExplicitOuter.scala:267)

{noformat}
